[workspace]
resolver = "2"
members = [
    # Docs
    "packages/docsite",
    # "packages/docs-router",

    # search
    "packages/search/search",
    "packages/search/search-macro",
    "packages/search/search-shared",

    # "packages/include_mdbook/packages/mdbook-macro",
    # "packages/include_mdbook/packages/use-mdbook",
    # "packages/include_mdbook/packages/mdbook-shared",
    # "packages/include_mdbook/packages/syntect-html",
    # "packages/include_mdbook/packages/mdbook-gen",
    # "packages/include_mdbook/packages/mdbook-gen-example",
]

[workspace.dependencies]
# gagalworks_docs_router = { path = "packages/docs-router" }
stork-lib = {version = "1.6", default-features = false }

# mdbook
# mdbook-gen = { path = "packages/include_mdbook/packages/mdbook-gen" }
# use-mdbook = { path = "packages/include_mdbook/packages/use-mdbook" }
# mdbook-shared = { path = "packages/include_mdbook/packages/mdbook-shared" }
# syntect-html = { path = "packages/include_mdbook/packages/syntect-html" }

# search
gagalworks-search = { path = "packages/search/search" }
gagalworks-search-macro = { path = "packages/search/search-macro" }
gagalworks-search-shared = { path = "packages/search/search-shared" }

# Dioxus Release
# dioxus = "0.6.3"
dioxus = { version = "0.6", features = ["fullstack"] }
dioxus-document = "0.6"
dioxus-sdk = { version = "0.6", default-features = false }
dioxus-core = "0.6"
dioxus-core-types = "0.6"
dioxus-devtools = "0.6"
dioxus-rsx-hotreload = "0.6"
dioxus-rsx = "0.6"
dioxus-html = { version = "0.6", default-features = false }
dioxus-rsx-rosetta = "0.6"
dioxus-autofmt = "0.6"
dioxus-dx-wire-format = "0.6"
dioxus-logger = "0.6"

getrandom = { version = "0.2" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.30"
uuid = "1.8.0"
gloo-net = { version = "0.6.0", features = ["websocket"] }
axum = { version = "0.7.9" }
thiserror = "2.0.4"
yazi = "0.2.1"
chrono = { version = "0.4.39" }
syn = "2.0.98"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = "debuginfo"

[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
debug = 0

[profile.server-dev]
inherits = "dev"
debug = 0

[profile.android-dev]
inherits = "dev"

[profile.release.build-override]
opt-level = 3
codegen-units = 1
